--- a/index-2.html
+++ b/index-2.html
@@ -79,6 +79,8 @@ img {
 
     <!-- Favicon -->
 <link rel="shortcut icon" href="assets/images/favicon.png"/>
+<link rel="stylesheet" href="./mycss/Style.css">
+
 
 <script src="../ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
@@ -208,8 +210,8 @@ function googleTranslateElementInit() {
                          <ul class="unstyled user">
 
 
-                             <li class="sign-in"><a href="en/indexc30b.html?a=login" class="btn btn-primary"><i class="fa fa-user"></i> sign in</a></li>
-                             <li class="sign-up"><a href="en/indexcca3.html?a=signup" class="btn btn-primary"><i class="fa fa-user-plus"></i> register</a></li>
+                            <li class="sign-in"><a href="https://accountultimafinancs.vercel.app/#/login" class="btn btn-primary"><i class="fa fa-user"></i> sign in</a></li>
+                            <li class="sign-up"><a href="https://accountultimafinancs.vercel.app/#/signup" class="btn btn-primary"><i class="fa fa-user-plus"></i> register</a></li>
 
 
 
@@ -416,6 +418,32 @@ color: #2962FF !important;
         </div>
     </section>
     <!-- Features Section Ends -->
+
+    <div class="newTakeBody">
+        <div class="newTakeBodyWrapper">
+            <div class="newTakeText">
+                <h2>Transparency</h2>
+                <p>We are transparent about our performance and do not conceal any 
+                    negative results. We do not make unrealistic promises of extraordinary gains. 
+                    Instead, we provide clear success metrics alongside powerful tools that assist
+                     you in auditing, analyzing, and making informed decisions.</p>
+            </div>
+            <div class="newTakeText">
+                <h2>Continuous improvement</h2>
+                <p>While it is true that all investments come with a level of risk, it's 
+                    important to note that not all risks are the same. By consciously accepting a 
+                    well-thought-out and calculated level of risk, you open up 
+                    the possibility for greater growth potential for your investment.</p>
+            </div>
+            <div class="newTakeText">
+                <h2>Collaboration</h2>
+                <p>Through collaborative efforts with our partners and users,
+                     we strive to develop the most innovative and 
+                    suitable smart trading platform for the cryptocurrency market.</p>
+            </div>
+        </div>
+    </div>
+
     <!-- About Section Starts -->
     <section class="about-us">
         <div class="container">
