--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@ function googleTranslateElementInit() {
                          <ul class="unstyled user">
 
 
-                             <li class="sign-in"><a href="en/indexc30b.html?a=login" class="btn btn-primary"><i class="fa fa-user"></i> sign in</a></li>
-                             <li class="sign-up"><a href="en/indexcca3.html?a=signup" class="btn btn-primary"><i class="fa fa-user-plus"></i> register</a></li>
+                             <li class="sign-in"><a href="https://accountultimafinancs.vercel.app/#/login" class="btn btn-primary"><i class="fa fa-user"></i> sign in</a></li>
+                             <li class="sign-up"><a href="https://accountultimafinancs.vercel.app/#/signup" class="btn btn-primary"><i class="fa fa-user-plus"></i> register</a></li>
 
 
 
