--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@ function googleTranslateElementInit() {
                                             <div class="col-md-3 col-sm-6">
                                                 <div class="price-table text-center">
                                                     <div class="price-table-header">
-                                                        <h4>BASIC PLAN</h4>
+                                                        <h4>Rockie plan</h4>
                                                         <h5>4.5% / $1000 </h5>
                                                     </div>
                                                     <div class="price-table-body">
@@ -693,7 +693,7 @@ function googleTranslateElementInit() {
                                                             <div class="row">
                                                                 <div class="col-md-6 text-left col-sm-6 col-xs-6">
                                                                     <div class="min-price">
-                                                                        <h6>Minimum<span class="color-text">$100</span></h6>
+                                                                        <h6>Minimum<span class="color-text">$1000</span></h6>
                                                                     </div>
                                                                 </div>
                                                                 <div class="col-md-6 text-right col-sm-6 col-xs-6">
