--- a/rules.html
+++ b/rules.html
@@ -390,49 +390,20 @@ color: #2962FF !important;
 
 <p align=justify>
 
-Please read the following rules carefully before signing in.<br><br>
+    Before signing in, please carefully read the following guidelines:
+    <br><br>
 
 
-
-You agree to be of legal age in your country to partake in this program, and in all the cases your minimal age must be 18 years.<br><br>
-
-Ultima Finance is not available to the general public and is opened only to the qualified members of Ultima Finance, the use of this site is restricted to our members and to individuals personally invited by them. Every deposit is considered to be a private transaction between the Ultima Finance and its Member.<br><br>
-
-As a private transaction, this program is exempt from the US Securities Act of 1933, the US Securities Exchange Act of 1934 and the US Investment Company Act of 1940 and all other rules, regulations and amendments thereof. We are not FDIC insured. We are not a licensed bank or a security firm.<br><br>
-  You agree that all information, communications, materials coming from Ultima Finance  are unsolicited and must be kept private, confidential and protected from any
-  disclosure. Moreover, the information, communications and materials contained
-  herein are not to be regarded as an offer, nor a solicitation for investments
-  in any jurisdiction which deems non-public offers or solicitations unlawful,
-  nor to any person to whom it will be unlawful to make such offer or solicitation.<br>
-  <br>
-
-All the data giving by a member to Ultima Finance will be only privately used and not disclosed to any third parties. Ultima Finance is not responsible or liable for any loss of data.<br><br>
-  You agree to hold all principals and members harmless of any liability. You
-  are investing at your own risk and you agree that a past performance is not
-  an explicit guarantee for the same future performance. You agree that all information,
-  communications and materials you will find on this site are intended to be regarded
-  as an informational and educational matter and not an investment advice.<br>
-  <br>
- You agree to execute all financial transactions solely at your own discretion and your own risk. You personally determine the size and term of your deposit. By investing in Ultima Finance you agree that you invest your money in a game-based company which, in no way and by no means, is responsible and liable to make any payment to your e-currencies accounts and thus, any claims regarding redeeming accumulated profits and even refunding the original amount of money that will be invested in Ultima Finance will be void and also you agree that the administrator of Ultima Finance has full authority to stop making payments in any time without any prior explanations.
-
-  <br>
-  <br>
-
-  We reserve the right to change the rules, commissions and rates of the program
-  at any time and at our sole discretion without notice, especially in order to
-  respect the integrity and security of the members' interests. You agree that
-  it is your sole responsibility to review the current terms. <br>
-  <br>
-
-Ultima Finance is not responsible or liable for any damages, losses and costs resulting from any violation of the conditions and terms and/or use of our website by a member. You guarantee to Ultima Finance that you will not use this site in any illegal way and you agree to respect your local, national and international laws.<br><br>
-
-Don't post bad vote on Public Forums and at Gold Rating Site without contacting the administrator of our program FIRST. Maybe there was a technical problem with your transaction, so please always CLEAR the thing with the administrator.<br><br>
-
-We will not tolerate SPAM or any type of UCE in this program. SPAM violators will be immediately and permanently removed from the program.<br><br>
-
-Ultima Finance reserves the right to accept or decline any member for membership without explanation.<br><br>
-
-If you do not agree with the above disclaimer, please do not go any further.
+    1. You must be of legal age in your country, which is typically 18 years old. <br>
+    2. Ultima Finance is a private platform available only to qualified members and their personally invited individuals. <br>
+    3. Deposits are considered private transactions between Ultima Finance and its members. <br>
+    4. This program is exempt from certain US securities regulations. <br>
+    5. All information from Ultima Finance should be kept confidential and not disclosed to others. <br>
+    6. Your data will be used privately and not shared with third parties. <br>
+    7. You agree to hold all principals and members harmless from any liability. <br>
+    8. Investing is done at your own risk and past performance is not a guarantee of future results. <br>
+    9. Information on this site is for informational and educational purposes, not investment advice. <br>
+    10. Financial transactions are executed at your own discretion and risk.
 
 
 
