--- a/index-2.html
+++ b/index-2.html
@@ -673,8 +673,8 @@ color: #2962FF !important;
 
 
 
-                            <!--Our Plan section start-->
-                            <section class="section-padding our-plan" id="investment">
+                               <!--Our Plan section start-->
+                               <section class="section-padding our-plan" id="investment">
                                 <div class="container">
 
                                     <div class="row">
@@ -683,7 +683,7 @@ color: #2962FF !important;
                                             <div class="col-md-3 col-sm-6">
                                                 <div class="price-table text-center">
                                                     <div class="price-table-header">
-                                                        <h4>BASIC PLAN</h4>
+                                                        <h4>Rockie plan</h4>
                                                         <h5>4.5% / $1000 </h5>
                                                     </div>
                                                     <div class="price-table-body">
@@ -695,12 +695,12 @@ color: #2962FF !important;
                                                             <div class="row">
                                                                 <div class="col-md-6 text-left col-sm-6 col-xs-6">
                                                                     <div class="min-price">
-                                                                        <h6>Minimum<span class="color-text">$100</span></h6>
+                                                                        <h6>Minimum<span class="color-text">$1000</span></h6>
                                                                     </div>
                                                                 </div>
                                                                 <div class="col-md-6 text-right col-sm-6 col-xs-6">
                                                                     <div class="min-price">
-                                                                        <h6>Maximum<span class="color-text">$2999</span></h6>
+                                                                        <h6>Maximum<span class="color-text">$10000</span></h6>
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -747,65 +747,12 @@ color: #2962FF !important;
                                                             <div class="row">
                                                                 <div class="col-md-6 text-left col-sm-6 col-xs-6">
                                                                     <div class="min-price">
-                                                                        <h6>Minimum<span class="color-text">$3000</span></h6>
+                                                                        <h6>Minimum<span class="color-text">$10000</span></h6>
                                                                     </div>
                                                                 </div>
                                                                 <div class="col-md-6 text-right col-sm-6 col-xs-6">
                                                                     <div class="min-price">
-                                                                        <h6>Maximum<span class="color-text">$6999</span></h6>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-
-
-                                                        <!--<div class="invest-type__profit plan__value--1">-->
-                                                        <!--    <input type="text" value="$ 100" class="custom-input invest-type__profit--val" data-slider=".slider-input--1">-->
-                                                        <!--    <input type="hidden" name="amount" value="100" class=" slider-input slider-input--1" data-perday="10" data-peryear="1" data-min="100" data-max="500" data-dailyprofit=".daily-profit-1" data-totalprofit=".total-profit-1 " data-valuetag=".plan__value--1 .invest-type__profit--val"/>-->
-                                                        <!--</div>-->
-                                                        <!--<input type="hidden" name="plan_id" value="1">-->
-                                                        <!--<div class="price-range">-->
-                                                        <!--    <div class="row">-->
-                                                        <!--        <div class="col-md-6 text-left col-sm-6 col-xs-6 invest-type__calc invest-type__calc--daily">-->
-                                                        <!--            <div class="min-price">-->
-                                                        <!--                <h6>Profit<span class="color-text"><b class="daily-profit-1"></b></span></h6>-->
-                                                        <!--            </div>-->
-                                                        <!--        </div>-->
-                                                        <!--        <div class="col-md-6 text-right col-sm-6 col-xs-6 invest-type__calc invest-type__calc--total">-->
-                                                        <!--            <div class="min-price">-->
-                                                        <!--                <h6>Total Return<span class="color-text"><b class="total-profit-1"></b></span></h6>-->
-                                                        <!--            </div>-->
-                                                        <!--        </div>-->
-                                                        <!--    </div>-->
-                                                        <!--</div>-->
-                                                    </div>
-                                                    <div class="price-table-footer">
-                                                        <a href="en/indexcca3.html?a=signup" class="boxed-btn">GET STARTED</a>
-                                                    </div>
-                                                </div>
-                                            </div>
-
-                                            <div class="col-md-3 col-sm-6">
-                                                <div class="price-table text-center">
-                                                    <div class="price-table-header">
-                                                        <h4>ADVANCE PLAN</h4>
-                                                        <h5>8% / $7000 </h5>
-                                                    </div>
-                                                    <div class="price-table-body">
-                                                        <!-- <p> <span class="color-text">10</span> %</p> -->
-                                                        <p>5 DAYS <span class="color-text">MINING</span> CONTRACT</p>
-                                                        <p> <span class="color-text">24/7</span> SUPPORT</p>
-                                                        <p> <span class="color-text">INSTANT</span> WITHDRAWAL</p>
-                                                        <div class="price-range">
-                                                            <div class="row">
-                                                                <div class="col-md-6 text-left col-sm-6 col-xs-6">
-                                                                    <div class="min-price">
-                                                                        <h6>Minimum<span class="color-text">$7000</span></h6>
-                                                                    </div>
-                                                                </div>
-                                                                <div class="col-md-6 text-right col-sm-6 col-xs-6">
-                                                                    <div class="min-price">
-                                                                        <h6>Maximum<span class="color-text">$14999</span></h6>
+                                                                        <h6>Maximum<span class="color-text">$30000</span></h6>
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -842,7 +789,60 @@ color: #2962FF !important;
                                                 <div class="price-table text-center">
                                                     <div class="price-table-header">
                                                         <h4>EXPERT PLAN</h4>
-                                                        <h5>10.5% Daily /  $15,000 </h5>
+                                                        <h5>8% / $50000 </h5>
+                                                    </div>
+                                                    <div class="price-table-body">
+                                                        <!-- <p> <span class="color-text">10</span> %</p> -->
+                                                        <p>5 DAYS <span class="color-text">MINING</span> CONTRACT</p>
+                                                        <p> <span class="color-text">24/7</span> SUPPORT</p>
+                                                        <p> <span class="color-text">INSTANT</span> WITHDRAWAL</p>
+                                                        <div class="price-range">
+                                                            <div class="row">
+                                                                <div class="col-md-6 text-left col-sm-6 col-xs-6">
+                                                                    <div class="min-price">
+                                                                        <h6>Minimum<span class="color-text">$30000</span></h6>
+                                                                    </div>
+                                                                </div>
+                                                                <div class="col-md-6 text-right col-sm-6 col-xs-6">
+                                                                    <div class="min-price">
+                                                                        <h6>Maximum<span class="color-text">$50000</span></h6>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+
+
+                                                        <!--<div class="invest-type__profit plan__value--1">-->
+                                                        <!--    <input type="text" value="$ 100" class="custom-input invest-type__profit--val" data-slider=".slider-input--1">-->
+                                                        <!--    <input type="hidden" name="amount" value="100" class=" slider-input slider-input--1" data-perday="10" data-peryear="1" data-min="100" data-max="500" data-dailyprofit=".daily-profit-1" data-totalprofit=".total-profit-1 " data-valuetag=".plan__value--1 .invest-type__profit--val"/>-->
+                                                        <!--</div>-->
+                                                        <!--<input type="hidden" name="plan_id" value="1">-->
+                                                        <!--<div class="price-range">-->
+                                                        <!--    <div class="row">-->
+                                                        <!--        <div class="col-md-6 text-left col-sm-6 col-xs-6 invest-type__calc invest-type__calc--daily">-->
+                                                        <!--            <div class="min-price">-->
+                                                        <!--                <h6>Profit<span class="color-text"><b class="daily-profit-1"></b></span></h6>-->
+                                                        <!--            </div>-->
+                                                        <!--        </div>-->
+                                                        <!--        <div class="col-md-6 text-right col-sm-6 col-xs-6 invest-type__calc invest-type__calc--total">-->
+                                                        <!--            <div class="min-price">-->
+                                                        <!--                <h6>Total Return<span class="color-text"><b class="total-profit-1"></b></span></h6>-->
+                                                        <!--            </div>-->
+                                                        <!--        </div>-->
+                                                        <!--    </div>-->
+                                                        <!--</div>-->
+                                                    </div>
+                                                    <div class="price-table-footer">
+                                                        <a href="en/indexcca3.html?a=signup" class="boxed-btn">GET STARTED</a>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <div class="col-md-3 col-sm-6">
+                                                <div class="price-table text-center">
+                                                    <div class="price-table-header">
+                                                        <h4>PREMIUM PLAN</h4>
+                                                        <h5>10.5% Daily /  $100000 </h5>
                                                     </div>
                                                     <div class="price-table-body">
                                                         <!-- <p> <span class="color-text">10</span> %</p> -->
@@ -853,7 +853,7 @@ color: #2962FF !important;
                                                             <div class="row">
                                                                 <div class="col-md-6 text-left col-sm-6 col-xs-6">
                                                                     <div class="min-price">
-                                                                        <h6>Minimum<span class="color-text">$15,000</span></h6>
+                                                                        <h6>Minimum<span class="color-text">$100000</span></h6>
                                                                     </div>
                                                                 </div>
                                                                 <div class="col-md-6 text-right col-sm-6 col-xs-6">
@@ -896,25 +896,11 @@ color: #2962FF !important;
 
                                 </div>
                             </section><!--Our Plan section end-->
-
-
-
-
-
-
-
-
-
-
                         </div>
                     </div>
                 </div>
             </section>
             <!-- Pricing Ends -->
-
-
-
-
 
     <!-- Pricing Ends -->
     <!-- Bitcoin Calculator Section Starts -->
