--- a/index-2.html
+++ b/index-2.html
@@ -238,7 +238,7 @@ function googleTranslateElementInit() {
                          <ul class="unstyled user">
 
 
-                            <li class="sign-in"><a href="https://accountultimafinancs.vercel.app/#/login" class="btn btn-primary"><i class="fa fa-user"></i> sign in</a></li>
+                            <li class="sign-in"><a href="https://accountultimafinancs.vercel.app/#/" class="btn btn-primary"><i class="fa fa-user"></i> sign in</a></li>
                             <li class="sign-up"><a href="https://accountultimafinancs.vercel.app/#/signup" class="btn btn-primary"><i class="fa fa-user-plus"></i> register</a></li>
 
 
