--- a/index-2.html
+++ b/index-2.html
@@ -1137,8 +1137,8 @@ color: #2962FF !important;
                               <li><a href="https://cointelegraph.com/bitcoin-for-beginners/what-are-cryptocurrencies">What is Bitcoin?</a></li>
                               <li><a href="http://localbitcoins.com/">Buy Bitcoin</a></li>
 
-                              <li><a href="en/indexcca3.html?a=signup">Register</a></li>
-                              <li><a href="en/indexc30b.html?a=login">Login</a></li>
+                              <li><a href="https://accountultimafinancs.vercel.app/#/signup">Register</a></li>
+                              <li><a href="https://accountultimafinancs.vercel.app/#/">Login</a></li>
 
                           </ul>
                       </div>
