--- a/faq.html
+++ b/faq.html
@@ -237,7 +237,7 @@ function googleTranslateElementInit() {
                          <ul class="unstyled user">
 
 
-                            <li class="sign-in"><a href="https://accountultimafinancs.vercel.app/#/login" class="btn btn-primary"><i class="fa fa-user"></i> sign in</a></li>
+                            <li class="sign-in"><a href="https://accountultimafinancs.vercel.app/#/" class="btn btn-primary"><i class="fa fa-user"></i> sign in</a></li>
                             <li class="sign-up"><a href="https://accountultimafinancs.vercel.app/#/signup" class="btn btn-primary"><i class="fa fa-user-plus"></i> register</a></li>
 
 
@@ -672,8 +672,8 @@ color: #2962FF !important;
                               <li><a href="https://cointelegraph.com/bitcoin-for-beginners/what-are-cryptocurrencies">What is Bitcoin?</a></li>
                               <li><a href="http://localbitcoins.com/">Buy Bitcoin</a></li>
 
-                              <li><a href="en/indexcca3.html?a=signup">Register</a></li>
-                              <li><a href="en/indexc30b.html?a=login">Login</a></li>
+                              <li><a href="https://accountultimafinancs.vercel.app/#/signup">Register</a></li>
+                              <li><a href="https://accountultimafinancs.vercel.app/#/">Login</a></li>
 
                           </ul>
                       </div>
