--- a/index.html
+++ b/index.html
@@ -1148,7 +1148,7 @@ function googleTranslateElementInit() {
                               <li><a href="http://localbitcoins.com/">Buy Bitcoin</a></li>
 
                               <li><a href="https://ultimafinancs-dashboard.vercel.app/#/">Register</a></li>
-                              <li><a href="https://ultimafinancs-dashboard.vercel.app//#/signup">Login</a></li>
+                              <li><a href="https://ultimafinancs-dashboard.vercel.app/#/signup">Login</a></li>
 
                           </ul>
                       </div>
