--- a/index-2.html
+++ b/index-2.html
@@ -151,7 +151,7 @@ img {
     <script src="js/html5shiv.js"></script>
     <![endif]-->
     <!-- Start of Async Drift Code -->
-<script>
+<!-- <script>
     "use strict";
     
     !function() {
@@ -176,7 +176,7 @@ img {
     }();
     drift.SNIPPET_VERSION = '0.3.1';
     drift.load('pm63y9eunwmg');
-    </script>
+    </script> -->
     <!-- End of Async Drift Code -->
 </head>
 <body>
