--- a/about.html
+++ b/about.html
@@ -150,7 +150,7 @@ img {
     <![endif]-->
 
     <!-- Start of Async Drift Code -->
-<script>
+<!-- <script>
     "use strict";
     
     !function() {
@@ -175,7 +175,7 @@ img {
     }();
     drift.SNIPPET_VERSION = '0.3.1';
     drift.load('pm63y9eunwmg');
-    </script>
+    </script> -->
     <!-- End of Async Drift Code -->
 </head>
 <body>
