--- a/aff.html
+++ b/aff.html
@@ -149,7 +149,7 @@ img {
     <script src="js/html5shiv.js"></script>
     <![endif]-->
     <!-- Start of Async Drift Code -->
-<script>
+<!-- <script>
     "use strict";
     
     !function() {
@@ -174,7 +174,7 @@ img {
     }();
     drift.SNIPPET_VERSION = '0.3.1';
     drift.load('pm63y9eunwmg');
-    </script>
+    </script> -->
     <!-- End of Async Drift Code -->
 </head>
 <body>
