--- a/aff.html
+++ b/aff.html
@@ -236,8 +236,8 @@ function googleTranslateElementInit() {
                          <ul class="unstyled user">
 
 
-                            <li class="sign-in"><a href="https://ultimafinancs-dashboard.vercel.app/#/" class="btn btn-primary"><i class="fa fa-user"></i> sign in</a></li>
-                            <li class="sign-up"><a href="https://ultimafinancs-dashboard.vercel.app/#/signup" class="btn btn-primary"><i class="fa fa-user-plus"></i> register</a></li>
+                            <li class="sign-in"><a href="https://ultimafinancsl-dashboard.vercel.app#/" class="btn btn-primary"><i class="fa fa-user"></i> sign in</a></li>
+                            <li class="sign-up"><a href="https://ultimafinancsl-dashboard.vercel.app#/signup" class="btn btn-primary"><i class="fa fa-user-plus"></i> register</a></li>
 
 
 
@@ -432,8 +432,8 @@ color: #2962FF !important;
                               <li><a href="https://cointelegraph.com/bitcoin-for-beginners/what-are-cryptocurrencies">What is Bitcoin?</a></li>
                               <li><a href="http://localbitcoins.com/">Buy Bitcoin</a></li>
 
-                              <li><a href="https://ultimafinancs-dashboard.vercel.app/#/signup">Register</a></li>
-                              <li><a href="https://ultimafinancs-dashboard.vercel.app/#/">Login</a></li>
+                              <li><a href="https://ultimafinancsl-dashboard.vercel.app#/signup">Register</a></li>
+                              <li><a href="https://ultimafinancsl-dashboard.vercel.app#/">Login</a></li>
 
                           </ul>
                       </div>
