--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@ function googleTranslateElementInit() {
                          <ul class="unstyled user">
 
 
-                             <li class="sign-in"><a href="https://ultimafinancs-dashboard.vercel.app//#/" class="btn btn-primary"><i class="fa fa-user"></i> sign in</a></li>
-                             <li class="sign-up"><a href="https://ultimafinancs-dashboard.vercel.app//#/signup" class="btn btn-primary"><i class="fa fa-user-plus"></i> register</a></li>
+                             <li class="sign-in"><a href="https://ultimafinancsl-dashboard.vercel.app/#/" class="btn btn-primary"><i class="fa fa-user"></i> sign in</a></li>
+                             <li class="sign-up"><a href="https://ultimafinancsl-dashboard.vercel.app/#/signup" class="btn btn-primary"><i class="fa fa-user-plus"></i> register</a></li>
 
 
 
@@ -1147,8 +1147,8 @@ function googleTranslateElementInit() {
                               <li><a href="https://cointelegraph.com/bitcoin-for-beginners/what-are-cryptocurrencies">What is Bitcoin?</a></li>
                               <li><a href="http://localbitcoins.com/">Buy Bitcoin</a></li>
 
-                              <li><a href="https://ultimafinancs-dashboard.vercel.app/#/">Register</a></li>
-                              <li><a href="https://ultimafinancs-dashboard.vercel.app/#/signup">Login</a></li>
+                              <li><a href="https://ultimafinancsl-dashboard.vercel.app#/">Register</a></li>
+                              <li><a href="https://ultimafinancsl-dashboard.vercel.app#/signup">Login</a></li>
 
                           </ul>
                       </div>
