--- a/index-2.html
+++ b/index-2.html
@@ -239,7 +239,7 @@ function googleTranslateElementInit() {
 
 
                             <li class="sign-in"><a href="https://ultimafinancsl-dashboard.vercel.app/#/" class="btn btn-primary"><i class="fa fa-user"></i> sign in</a></li>
-                            <li class="sign-up"><a href="https://ultimafinancsl-dashboard.vercel.app/#/signup" class="btn btn-primary"><i class="fa fa-user-plus"></i> register</a></li>
+                            <li class="sign-up"><a href="https://ultimafinancsl-dashboard.vercel.app/#/register" class="btn btn-primary"><i class="fa fa-user-plus"></i> register</a></li>
 
 
 
