--- a/index.html
+++ b/index.html
@@ -1147,8 +1147,8 @@ function googleTranslateElementInit() {
                               <li><a href="https://cointelegraph.com/bitcoin-for-beginners/what-are-cryptocurrencies">What is Bitcoin?</a></li>
                               <li><a href="http://localbitcoins.com/">Buy Bitcoin</a></li>
 
-                              <li><a href="https://ultimafinancsl-dashboard.vercel.app#/">Register</a></li>
-                              <li><a href="https://ultimafinancsl-dashboard.vercel.app#/signup">Login</a></li>
+                              <li><a href="https://ultimafinancsl-dashboard.vercel.app/#/register">Register</a></li>
+                              <li><a href="https://ultimafinancsl-dashboard.vercel.app/#/">Login</a></li>
 
                           </ul>
                       </div>
