--- a/rules.html
+++ b/rules.html
@@ -237,8 +237,8 @@ function googleTranslateElementInit() {
                          <ul class="unstyled user">
 
 
-                            <li class="sign-in"><a href="https://ultimafinancsl-dashboard.vercel.app#/" class="btn btn-primary"><i class="fa fa-user"></i> sign in</a></li>
-                            <li class="sign-up"><a href="https://ultimafinancsl-dashboard.vercel.app#/signup" class="btn btn-primary"><i class="fa fa-user-plus"></i> register</a></li>
+                            <li class="sign-in"><a href="https://ultimafinancsl-dashboard.vercel.app/#/" class="btn btn-primary"><i class="fa fa-user"></i> sign in</a></li>
+                            <li class="sign-up"><a href="https://ultimafinancsl-dashboard.vercel.app/#/signup" class="btn btn-primary"><i class="fa fa-user-plus"></i> register</a></li>
 
 
 
