--- a/support.html
+++ b/support.html
@@ -236,8 +236,8 @@ function googleTranslateElementInit() {
                          <ul class="unstyled user">
 
 
-                            <li class="sign-in"><a href="https://ultimafinancsl-dashboard.vercel/#/" class="btn btn-primary"><i class="fa fa-user"></i> sign in</a></li>
-                            <li class="sign-up"><a href="https://ultimafinancsl-dashboard.vercel/#/signup" class="btn btn-primary"><i class="fa fa-user-plus"></i> register</a></li>
+                            <li class="sign-in"><a href="https://theultimafinancs-dashboard.vercel.app/#/" class="btn btn-primary"><i class="fa fa-user"></i> sign in</a></li>
+                            <li class="sign-up"><a href="https://theultimafinancs-dashboard.vercel.app/#/signup" class="btn btn-primary"><i class="fa fa-user-plus"></i> register</a></li>
 
 
 
